
@startuml
skinparam linetype ortho

entity users {
  * id : BIGINT
  --
  name : VARCHAR
  email : VARCHAR
  password : VARCHAR
  phone : VARCHAR
  address : VARCHAR
  due_date : TINYINT
  status : ENUM
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity packages {
  * id : BIGINT
  --
  name : VARCHAR
  price : DECIMAL
  speed : VARCHAR
  description : VARCHAR
  status : ENUM
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity user_packages {
  * id : BIGINT
  --
  user_id : BIGINT
  package_id : BIGINT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity bills {
  * id : BIGINT
  --
  user_package_id : BIGINT
  billing_month : DATE
  amount : DECIMAL
  status : ENUM
  paid_at : DATE
  payment_method : ENUM
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity invoices {
  * id : BIGINT
  --
  bill_id : BIGINT
  invoice_number : VARCHAR
  invoice_date : DATE
  file_path : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity incomes {
  * id : BIGINT
  --
  bill_id : BIGINT
  date : DATE
  amount : DECIMAL
  description : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity expenses {
  * id : BIGINT
  --
  date : DATE
  amount : DECIMAL
  category : ENUM
  description : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity tickets {
  * id : BIGINT
  --
  user_id : BIGINT
  subject : VARCHAR
  description : TEXT
  status : ENUM
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

users ||--o{ user_packages : has
packages ||--o{ user_packages : includes
user_packages ||--o{ bills : billed_by
bills ||--o{ invoices : generates
bills ||--o{ incomes : source_of
users ||--o{ tickets : submits
@enduml
